# rpdictation

./: CHANGELOG.md  Cargo.toml  Justfile  PKGBUILD  PLAN.md  README.md  SPEC.md
.github/workflows/: rust.yml
src/: audio.rs  ipc.rs  main.rs  typing.rs
src/focus/: mod.rs  niri.rs
src/providers/: google.rs  groq.rs  mistral.rs  mod.rs  openai.rs
