[package]
name = "rpdictation"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.32", features = ["full", "io-util"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["sync"] }
clap = { version = "4.4", features = ["derive"] }
nix = "0.26"
notify-rust = "4.9"
