[package]
name = "rpdictation"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
#tokio = { version = "1.32", features = ["full", "io-util"] }
tokio = { version = "1.32", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
anyhow = "1.0"
serde_json = "1.0"
tokio-util = "0.7"
clap = { version = "4.4", features = ["derive"] }
nix = "0.26"
dotenvy = "0.15.7"
async-trait = "0.1"
flacenc = "0.4"
